--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,48 @@
     padding: 0;
     box-sizing: border-box;
 }
+main {
+    max-width: 100vw;
+    display: flex;
+}
+
+.playGraund {
+    width: 95vw;
+    height: 100vh;
+    background-color: lightgray;
+}
+.aside {
+    width: 15vw;
+    height: 100vh;
+    background-color: rgb(45, 44, 44);
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-top: 10vh ;
+    align-items: center;
+}
+.instrument {
+    width: 7vw;
+    height: 15vh;
+    border: .4vh solid white;
+    padding: .3vh;
+    border-radius: 3px;
+    margin-bottom: 2vh;
+}
+.instrument img {
+    width: 100%;
+    height: 80%;
+    display: block;
+}
+.instrument p {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
+    font-weight: bold;
+    width: 100%;
+    font-size: 1.6vw;
+}
+.inverting {
+    width: 4vw;
+    height: 7vh;
+}
