--- a/styles/style.css
+++ b/styles/style.css
@@ -10,21 +10,35 @@
     box-sizing: border-box;
 }
 main {
-    max-width: 100vw;
+    width: 100vmax;
+    height: 100vmax;
     display: flex;
+    justify-content: space-between;
 }
 
-.playGraund {
-    width: 80vw;
+.play__container {
+    width: 85vw;
     height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.playGraund {
+    
+    height: 100vmin;
     background-color: lightgrey;
     display: grid;
     grid-template-rows: repeat(20, 2fr);
     grid-template-columns: repeat(20, 2fr);
+    
   
 }
 .aside {
-    width: 20vw;
+   
+    width: 15vw;
+
     height: 100vh;
     background-color: rgb(45, 44, 44);
     
@@ -35,21 +49,21 @@ main {
     align-items: center;
 }
 .instrument {
-    width: 7vw;
-    height: 15vh;
+    width: 60%;
+    height: 20%;
     border: .4vh solid white;
     border-radius: 3px;
     margin-bottom: 2vh;
+    padding-left: 0.6vw;
     overflow: hidden;
 }
 .instrument img {
     width: 100%;
-    height: 80%;
+    height: 87%;
     display: block;
 }
 .instrument p {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: white;
+    font-family: 'Minecraft 1.1';    color: white;
     font-weight: bold;
     width: 100%;
     font-size: 1.4vw;
@@ -66,15 +80,14 @@ main {
 .cloud,
 .oak
  {
-    width: 4vw;
-    height: 4.75vh;
+    width: 5vmin;
+  
 }
 .playItem {
-    background-color: aqua;
-    border: solid 1px green;
+    background-color: rgb(145, 221, 254);
 }
 .stone {
-   
+    background-origin: inherit;
     background: url(../images/Cobblestone.png);
 }
 .dirt {
@@ -110,7 +123,7 @@ main {
     transition: keyframe 1s linear;
 }
 .start-page {
-    width: 80vw;
+    width: 85vw;
     height: 100vh;
     background: url(../images/Dirt.png);
     display: flex;
