--- a/styles/style.css
+++ b/styles/style.css
@@ -38,10 +38,8 @@ main {
 .aside {
    
     width: 15vw;
-
     height: 100vh;
     background-color: rgb(45, 44, 44);
-    
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -54,12 +52,12 @@ main {
     border: .4vh solid white;
     border-radius: 3px;
     margin-bottom: 2vh;
-    padding-left: 0.6vw;
+    padding-left: 0.5vw;
     overflow: hidden;
 }
 .instrument img {
     width: 100%;
-    height: 87%;
+    height: 85%;
     display: block;
 }
 .instrument p {
@@ -69,8 +67,9 @@ main {
     font-size: 1.4vw;
 }
 .inverting {
-    width: 4vw;
+    width: 5vmin;
     height: 5vh;
+    padding: 0;
 }
 .playItem,
 .stone,
@@ -80,8 +79,8 @@ main {
 .cloud,
 .oak
  {
+    height: 5vh;
     width: 5vmin;
-  
 }
 .playItem {
     background-color: rgb(145, 221, 254);
@@ -114,14 +113,14 @@ main {
     background-color: blue;
 }
 
-@keyframes keyframe {
+/* @keyframes keyframe {
     from { background-color: blue;}
     50% { background-color: red;}
     to { background-color: blue;}
   }
 .needed-instrument {
     transition: keyframe 1s linear;
-}
+} */
 .start-page {
     width: 85vw;
     height: 100vh;
@@ -132,10 +131,10 @@ main {
 }
 .start-img-button {
     width: 70%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .start-img-minecraft {
     width: 50%;
